--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 									<!-- -->
 									<!-- status -->
-									<div class="title-body">ĐANG LÀM TRÒ CON BÒ</div>
+									<div class="title-body">Người Tiện Tay Vẽ Hoa Lá, Ta Đa Tình Tưởng Đó Là Mùa Xuân !!</div>
 									<div class="custom-status">
 										<img id="custom-status-emoji" />
 										<p class="custom-status-text"></p>
@@ -259,7 +259,7 @@
 			}
 			setInterval(changeBanner, intervalTime);
 		});
-	</script> -->
+	</script> 
 
 	<!-- Messenger Plugin chat Code -->
 	<div id="fb-root"></div>
